--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,6 @@
         "node_modules": true
     },
     "typescript.tsc.autoDetect": "off",
-    "explorerExclude.backup": {}
+    "explorerExclude.backup": {},
+    "vsicons.presets.nestjs": true
 }
