--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "codemap",
-  "publisher": "cometix",
-  "displayName": "Codemap Explorer",
+  "publisher": "mommysgoodpuppy",
+  "displayName": "OpenCodemap",
   "description": "AI-powered code exploration and visualization with dual-view rendering",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "engines": {
     "vscode": "^1.98.0"
   },
